Changed next.js version to secure version

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
-    "next": "15.3.4",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.3",
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.4.21",
     "bufferutil": "^4.0.9",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.4.38",
     "prisma": "^6.11.1",
     "tailwindcss": "^3.4.1",
