--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.1",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/adapter-neon": "^6.11.1",
+    "@prisma/adapter-neon": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -34,6 +34,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.3",
@@ -41,7 +42,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^6.15.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.26",
     "@types/react": "^19",
@@ -54,7 +55,7 @@
     "eslint-config-next": "^16.0.7",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
-    "prisma": "^6.19.0",
+    "prisma": "^6.15.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
