--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@neondatabase/serverless": "^1.0.1",
     "@paypal/react-paypal-js": "^8.9.2",
     "@prisma/adapter-neon": "^6.15.0",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -30,11 +31,13 @@
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "query": "^0.2.0",
     "query-string": "^9.3.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
     "recharts": "^3.6.0",
+    "string": "^3.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.3",
