--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
     "recharts": "^3.6.0",
+    "slugify": "^1.6.6",
     "string": "^3.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
